[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "bloomtech_data_loader"
version = "0.0.1"
authors = [
  { name="Jeff Bricker", email="jdbricker@gmail.com" },
]
description = "simple package to manage the typical workflow of downloading a data file if it doesn't exist locally"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jdbricker/bloomtech-data-loader"
"Bug Tracker" = "https://github.com/jdbricker/bloomtech-data-loader/issues"
